temp/sampleapp/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapp-service
  namespace: sampleapp
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: my-app
